<resources>
    <string name="app_name">HillCaddy</string>


    //Main Activity
    <string name="sel_profile_text">Profile: </string>
    <string name="action_settings">Settings</string>
    <string name="sel_course_button">Course Mode</string>
    <string name="sel_range_button">Range Mode</string>
    <string name="create_prof_view_button">Create New Profile</string>
    <string name="sel_mode_desc">Instructions: \n   -Select Course Mode to launch the HillCaddy shot calculator \n   -Select Range Mode to add clubs and shots to your profile</string>



    //Create New Profile Activity
    <string name="title_activity_create_profile">Create New Profile</string>
    <string name="new_name_text">Name</string>
    <string name="create_prof_button">Create Profile</string>
    <string name="title_activity_select_mode">Select Mode</string>


    //Course Mode Activity
    <string name="title_activity_course_mode">Course Mode</string>
    <string name="viewDistanceCard_course_button">Distance Card</string>
    <string name="calcClub_course_button">Club Calculator</string>
    <string name="calcDensity_course_button">Calculate Air Density</string>


    //Range Mode Activity
    <string name="title_activity_range_mode">Range Mode</string>
    <string name="range_sel_club">Select Club</string>
    <string name="ball_speed_text">Ball Speed (mph)</string>
    <string name="back_spin_text">Back Spin (rpm)</string>
    <string name="side_spin_text">Side Spin (rpm)</string>
    <string name="addRemove_range_button">Add/Remove Clubs</string>
    <string name="launch_angle_text">Launch Angle (degrees)</string>
    <string name="addShot_range_button">Add Shot</string>

    <string name="viewShots_range_button">View Shots</string>

    //Add Club Activity
    <string name="title_activity_add_club">Edit Bag</string>
    <string name="new_club_name_text">Type New Club Name Here</string>
    <string name="addClub_editBag_button">Add New Club</string>
    <string name="remove_club_name_text">Select Club to Remove From Dropdown</string>
    <string name="remove_club_button">Remove Club</string>

    //View Shots Activity
    <string name="title_activity_view_shots">View Shots</string>
    <string name="viewShots_viewShots_button">View Shots for Selected Club</string>
    <string name="removeShot_viewShots_button">Remove Selected Shot</string>

    //Distance Card Activity
    <string name="title_activity_distance_card">Distance Card</string>

    //Recommended club Activity
    <string name="title_activity_recommended_club">Club Calculator</string>
    <string name="instructions_recommendClub_text">1) Manually enter the angle to target or press the angle button next to the text field to use the device\'s hardware to get the angle to the target.
        \n\n2) Enter the distance to the target as measured by a laser range finder.
        \n\n3) Press \"Calculate Best Club\" to see the best club based on the conditions.
        \n\n*note: Press the air density button to update the air density and to get more accurate results.</string>
    <string name="distance_recommendClub_text">Distance to Target (yds):</string>
    <string name="angle_recommendClub_text">Angle to Target (deg):</string>
    <string name="angleDesc_recommendClub_text">*note: - for downhill, + for uphill</string>
    <string name="angleCapt_recommendClub_button">Capture Angle w/ Phone</string>
    <string name="calcClub_recommendClub_button">Calculate Best Club</string>

    //Angle Capture Activity
    <string name="title_activity_angle_capture">Angle Capture</string>
    <string name="capture_angleCapture_button">Press to Capture Angle</string>
    <string name="title_activity_club_result">Club Results</string>

    //Air Density Activity
    <string name="title_activity_air_density">Air Density Calculator</string>
    <string name="pressure_airDens_text">Pressure (hPa): </string>
    <string name="temp_airDens_text">Temperature (F): </string>
    <string name="humidity_airDens_text">Relative Humidity (%): </string>
    <string name="calc_airDens_button">Calculate Air Density</string>
    <string name="default_airDens_button">Reset Air Density to Default</string>
    <string name="title_activity_settings">Settings</string>

    //Settings Activity
    <string name="background_settings_text">Show Background Images</string>
    <string name="title_activity_about">About HillCaddy</string>

    //About Activity
    <string name="about_text">Developed by Clint Wojtowicz
        \n\nI can be reached at clint.wojtowicz@gmail.com with any questions or comments.</string>
    <string name="bugs_text">The app was designed and tested using a Samsung Galaxy S5, if there are compatibility issues with your device, please send me an email with a description of the issue. </string>
    <string name="thanks_text">Special thanks to:
        \n\n  -Matt Pianowski for drawing the logo.
        \n\n  -Peter Ligotti at Callaway for his suggestion to use the accelerometer for angle capture.
        \n\n  -The Integrated Systems team at Callaway for their UI design advice and for allowing me to use their Foresight GC2 to capture shot data.
        \n\n  -Dr. Charles De Leone at Cal State San Marcos for his advice and mentoring throughout the project.
        \n\n  -My Dad for constantly asking how far uphill and downhill shots will play which lead me to the idea for the app.
    </string>









</resources>
