<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.clint.hillcaddy.RecommendedClubActivity"
    android:orientation="vertical"
    android:id="@+id/recommendClub_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_recommendClub_text"
        android:textSize="14sp"
        android:paddingBottom="10dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/angle_recommendClub_text"
        android:textSize="16sp"
        android:paddingTop="20dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/angleDesc_recommendClub_text"
        android:textSize="14sp"
        android:paddingBottom="10dp"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id= "@+id/angle_recommendClub_editText"
        android:inputType="numberSigned"
        android:maxLength="3"
        android:paddingBottom="10dp"
        android:textColor="@android:color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/angleCapt_recommendClub_button"
        android:onClick="showAngleCaptureView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_recommendClub_text"
        android:textSize="16sp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id= "@+id/distance_recommendClub_editText"
        android:inputType="number"
        android:maxLength="3"
        android:paddingBottom="10dp"
        android:textColor="@android:color/black"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcClub_recommendClub_button"
        android:onClick="calculateBestClub"/>


</LinearLayout>
