<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.clint.hillcaddy.AddClubActivity"
    android:orientation="vertical">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_club_name_text"
        android:textSize="18sp"
        android:paddingBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id= "@+id/name_addClub_editText"
        android:maxLength="10"
        android:paddingBottom="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addClub_editBag_button"
        android:onClick="addClubToProfile"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_club_name_text"
        android:textSize="18sp"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"/>

    <Spinner
        android:id="@+id/selClub_edit_Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        >
    </Spinner>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_club_button"
        android:onClick="removeClubFromProfile"/>


</LinearLayout>
