<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.clint.hillcaddy.CourseModeActivity"
    android:orientation="vertical">



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewDistanceCard_course_button"
        android:onClick="showDistanceCard" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcClub_course_button"
        android:onClick="showRecommendedClubs" />

    <Button
        android:id="@+id/calcDens_course_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcDensity_course_button"
        android:onClick="calculateAirDensity" />

</LinearLayout>
