<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.clint.hillcaddy.ViewShotsActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/range_sel_club"
        android:paddingBottom="10dp"
        android:textSize = "18dp"/>

    <Spinner
        android:id="@+id/selClub_viewShots_Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        >
    </Spinner>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewShots_viewShots_button"
        android:onClick="showShots" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/removeShot_viewShots_button"
        android:onClick="removeSelectedShot" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shots_listView"
        >


    </ListView>




</LinearLayout>
