<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.clint.hillcaddy.AirDensityActivity"
    android:orientation="vertical"
    android:id="@+id/airDensity_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_airDens_text"
            android:textSize="14sp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id= "@+id/pressure_airDens_editText"
            android:inputType="number"
            android:maxLength="5"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_airDens_text"
            android:textSize="14sp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id= "@+id/temp_airDens_editText"
            android:inputType="number"
            android:maxLength="3"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_airDens_text"
            android:textSize="14sp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id= "@+id/humidity_airDens_editText"
            android:inputType="number"
            android:maxLength="3"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_airDens_button"
        android:onClick="performManualAirDensityCalc"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_airDens_button"
        android:onClick="setAirDensityToDefault"/>



</LinearLayout>
